# save-vision-violation

./: .dockerignore  .gitignore  AGENTS.md  BOX_TRACKING_SUMMARY.md  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  download_models.py  main.py  pyproject.toml
backend/: config.template.yml  config.yml  requirements.txt  run.py  test_detection.py  test_person_carry.py
backend/app/: main.py
backend/app/api/: __init__.py  config.py  debug_stream.py  monitor.py  rules.py  zones.py
backend/app/config/: __init__.py  manager.py  models.py
backend/app/core/: byte_tracker.py  debug_visualizer.py  detector.py  kalman.py  person_tracker.py  pose_tracker.py  state_machine.py  tracker.py  violation_checker.py  zone_manager.py
backend/app/services/: model_api_client.py  rabbitmq_client.py  redis_client.py  rtsp_client.py  video_stream.py
backend/app/utils/: __init__.py  helpers.py
docker/: DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/plans/: 2025-04-02-warehouse-violation-improvements-design.md  2025-04-24-api-detection-design.md  2025-04-24-api-detection-implementation.md  2026-03-16-warehouse-violation-system.md  2026-03-17-video-realtime-test-design.md  2026-03-17-video-stream-implementation.md  2026-04-13-person-carry-tracking.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: CameraConfig.vue  ParamSettings.vue  RuleConfig.vue  (+4 more)
scripts/: build-for-offline.sh  deploy.sh  load-images.sh
(+7 files in other folders)
