[project]
name = "save-vision-violation"
version = "0.1.0"
description = "基于YOLO的仓库作业违规检测系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyyaml==6.0.1",
    "opencv-python>=4.9.0",
    "ultralytics==8.1.0",
    "redis==5.0.1",
    "pika==1.3.2",
    "numpy==1.26.3",
    "filterpy==1.4.5",
    "python-multipart==0.0.6",
    "websockets==12.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
